include/svtools/toolbarmenu.hxx
@@ -125,7 +125,7 @@ private:
     std::unique_ptr<WeldToolbarPopup> m_xPopup;
 public:
     InterimToolbarPopup(const css::uno::Reference<css::frame::XFrame>& rFrame, vcl::Window* pParent,
-                        std::unique_ptr<WeldToolbarPopup> xPopup);
+                        std::unique_ptr<WeldToolbarPopup> xPopup, bool bTearable = false);
     weld::Container* getContainer() { return m_xContainer.get(); }
     virtual void dispose() override;
     virtual ~InterimToolbarPopup() override;
